// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`engine class > should re-evaluate other models when global variable changes 1`] = `
[
  {
    "output": {
      "default": 10,
    },
    "path": "model1",
  },
  {
    "output": {
      "default": 5,
    },
    "path": "model2",
  },
  {
    "output": {
      "default": 5,
    },
    "path": "model2",
  },
  {
    "output": {
      "default": 6,
    },
    "path": "model1",
  },
  {
    "output": {
      "default": 1,
    },
    "path": "model2",
  },
]
`;

exports[`engine class should re-evaluate other models when global variable changes 1`] = `
Array [
  Object {
    "output": Object {
      "default": 10,
    },
    "path": "model1",
  },
  Object {
    "output": Object {
      "default": 5,
    },
    "path": "model2",
  },
  Object {
    "output": Object {
      "default": 5,
    },
    "path": "model2",
  },
  Object {
    "output": Object {
      "default": 6,
    },
    "path": "model1",
  },
  Object {
    "output": Object {
      "default": 1,
    },
    "path": "model2",
  },
]
`;
